app/assets/stylesheets/ui/thumbs/videos.css
.thumb, li.generic.thumb {
  --thumb-width: 250px;
  --aspect-ratio: 0.92;
  --thumb-height: calc(var(--thumb-width) * var(--aspect-ratio));
  --tile-overlay-background: rgba(0,0,0,0.3);
  --tile-overlay-color: #fff;

  text-decoration: none;
}
.thumb.tiny {
  --thumb-width: 85px;
  width: var(--thumb-width);
  height: 100%;
}
.thumb.tiny .tile {
  --aspect-ratio: 0.59;
}

.thumb-hidden {
  opacity: 0.3;
}
.thumb.working {
  background: #95ffd5;
  border: solid 1px #ccc !important;
  margin: -1px;
}

li.generic.mix {
  background: var(--thumb-hover-color);
  padding: 10px;
  border-top: solid 3px var(--block-border-color);
  border-bottom: solid 3px var(--block-border-color);
  border-radius: 3px;
}

li.generic.mix .tile::after {
  content: '\f09e';
  font-family: 'FontAwesome';
  position: absolute;
  padding: 10px;
  top: 0;
  right: 0;
  font-size: 2em;
  opacity: 0.6;
  text-align: center;
  background: var(--tile-overlay-background);
  border-radius: 0 0 0 5px;
}

.thumb .tile .detail {
  display: none;
}
.thumb .tile .duration {
  opacity: 0;
  position: absolute;
  padding: 1px 6px;
  right: 0;
  bottom: 0;
  color: var(--tile-overlay-color);
  background: var(--tile-overlay-background);
  border-radius: 5px 0 0 0;
  font-weight: 280;
  font-style: normal;
  font-stretch: expanded;
}
.thumb .tile .duration .green {
  color: #8bfb12;
  text-shadow: 0 0 1px #fff;
}
.thumb .tile .duration .red {
  color: #fb1616;
  text-shadow: 0 0 1px #fff;
}

.thumb .tile:hover:before,
.thumb .tile:focus:before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  transition: outline 0.3s ease;
  outline: solid 3px rgba(0,0,255,0.1);
}
.thumb .tile:hover .duration,
.thumb .tile:focus .duration {
  opacity: 1;
}

.thumb .title {
  max-height: 3.1em;
}

.thumb .tile.link {
  display: flex;
  align-items: center;
  background: none;
  border: solid 1px #aaa;
  text-align: center;
  color: #aaa;
  vertical-align: middle;
  text-decoration: none;
}
.thumb .tile.link span {
  width: 100%;
}

.thumb .tile .detail, .thumb .tile .title, .thumb .tile + .title {
  max-height: 3.1em;
  overflow: hidden;
  text-overflow: ellipsis;
  -o-text-overflow: ellipsis;
}

.thumb .details {
  display: flex;
  flex-direction: column;
}

.thumb .details .detail,
.thumb .details .detail .taglist {
  font-weight: normal;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.thumb .details .detail .taglist {
  padding: 0 5px;
}
.details .detail {
  display: flex;
  overflow: hidden;
}
.details .detail .grow {
  flex-grow: 1;
}

ul.horizontal .thumb .detail {
  color: #aaa;
  font-size: 0.8em;
}
ul.horizontal .thumb .detail + .detail {
  font-style: italic;
}

@media(max-width: 700px) {
  .thumb .date {
    display: none;
  }
}

